[package]
name = "pendulum"
version = "3.0.0-alpha-1"
edition = "2021"

[lib]
name = "_pendulum"
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies]
iso8601 = "0.6.1"
nom = "7.1.3"
pyo3 = { version = "0.18.1", features = ["extension-module"] }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
