[package]
name = "_pendulum"
version = "3.0.0"
edition = "2021"

[lib]
name = "_pendulum"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
overflow-checks = false

[dependencies]
pyo3 = { version = "0.19.0", features = ["extension-module", "generate-import-lib"] }
mimalloc = { version = "0.1.39", optional = true, default-features = false }

[features]
extension-module = ["pyo3/extension-module"]
default = ["mimalloc"]
